// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Upload render function Add image 1`] = `
<CreateProfilePage
  addImage={[Function]}
>
  <div
    className="profile__edit-content"
  >
    <Head
      canonical="/profil/rediger"
      robots="noindex"
      title="Min profil"
    >
      <HelmetWrapper
        defer={true}
        encodeSpecialCharacters={true}
      >
        <SideEffect(NullComponent)
          defer={true}
          encodeSpecialCharacters={true}
          link={
            Array [
              Object {
                "href": "https://laesekompas.dk/profil/rediger",
                "rel": "canonical",
              },
            ]
          }
          meta={
            Array [
              Object {
                "content": "noindex",
                "name": "robots",
              },
              Object {
                "content": "På Læsekompasset kan du gå på opdagelse i skønlitteraturen, få personlige anbefalinger og dele dine oplevelser med andre.",
                "name": "description",
              },
              Object {
                "content": "Min profil",
                "name": "og:title",
              },
              Object {
                "content": "På Læsekompasset kan du gå på opdagelse i skønlitteraturen, få personlige anbefalinger og dele dine oplevelser med andre.",
                "name": "og:description",
              },
              Object {
                "content": "https://laesekompas.dk/",
                "property": "og:url",
              },
              Object {
                "content": "Læsekompas",
                "property": "og:site_name",
              },
              Object {
                "content": "website",
                "property": "og:type",
              },
              Object {
                "content": "http://laesekompas.dk/img/open-graph/hero-01.jpg",
                "property": "og:image",
              },
              Object {
                "content": "1200",
                "property": "og:image:width",
              },
              Object {
                "content": "675",
                "property": "og:image:height",
              },
            ]
          }
          title="Min profil | Læsekompas"
          titleAttributes={Object {}}
        >
          <NullComponent
            defer={true}
            encodeSpecialCharacters={true}
            link={
              Array [
                Object {
                  "href": "https://laesekompas.dk/profil/rediger",
                  "rel": "canonical",
                },
              ]
            }
            meta={
              Array [
                Object {
                  "content": "noindex",
                  "name": "robots",
                },
                Object {
                  "content": "På Læsekompasset kan du gå på opdagelse i skønlitteraturen, få personlige anbefalinger og dele dine oplevelser med andre.",
                  "name": "description",
                },
                Object {
                  "content": "Min profil",
                  "name": "og:title",
                },
                Object {
                  "content": "På Læsekompasset kan du gå på opdagelse i skønlitteraturen, få personlige anbefalinger og dele dine oplevelser med andre.",
                  "name": "og:description",
                },
                Object {
                  "content": "https://laesekompas.dk/",
                  "property": "og:url",
                },
                Object {
                  "content": "Læsekompas",
                  "property": "og:site_name",
                },
                Object {
                  "content": "website",
                  "property": "og:type",
                },
                Object {
                  "content": "http://laesekompas.dk/img/open-graph/hero-01.jpg",
                  "property": "og:image",
                },
                Object {
                  "content": "1200",
                  "property": "og:image:width",
                },
                Object {
                  "content": "675",
                  "property": "og:image:height",
                },
              ]
            }
            title="Min profil | Læsekompas"
            titleAttributes={Object {}}
          />
        </SideEffect(NullComponent)>
      </HelmetWrapper>
    </Head>
    <div
      className="profile__edit-titlezone"
    >
      <h1
        className="profile__edit-title"
      >
        <T
          component="profile"
          name="editProfile"
        >
          Rediger profil
        </T>
      </h1>
    </div>
    <div
      className="profile__edit-page-position"
    >
      <div
        className="profile__edit-top-position"
      >
        <div
          className="profile__edit-image-zone"
        >
          <div
            className="profile__edit-image-upload"
          >
            <ProfileUploadImage
              activateSaveButton={[Function]}
              baseImage="/img/general/user-placeholder-thumbnail.svg"
              onFile={[Function]}
              thumbnailImageHover="/img/general/user-placeholder-thumbnail-hover.svg"
            >
              <div
                className="profile-picture"
              >
                <div
                  className="image-upload"
                >
                  <div
                    className="image-upload-loader"
                  >
                    <UploadButton
                      baseImage="/img/general/user-placeholder-thumbnail.svg"
                      readFiles={[Function]}
                      thumbnailImageHover="/img/general/user-placeholder-thumbnail-hover.svg"
                    >
                      <label>
                        <HoverImage
                          mouseOver="/img/general/user-placeholder-thumbnail-hover.svg"
                          src="/img/general/user-placeholder-thumbnail.svg"
                        >
                          <img
                            alt=""
                            className="image-upload-image"
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            src="/img/general/user-placeholder-thumbnail.svg"
                          />
                        </HoverImage>
                        <input
                          accept="image/png, image/jpeg"
                          className="droppable-image-field--file-input"
                          onChange={[Function]}
                          type="file"
                        />
                        <div
                          className="profile-image-text"
                        >
                          <T
                            component="profile"
                            name="uploadProfilePicture"
                          >
                            Vælg billede
                          </T>
                        </div>
                      </label>
                    </UploadButton>
                  </div>
                  <div
                    className="profile__image-errors"
                  >
                    <Error />
                  </div>
                </div>
              </div>
            </ProfileUploadImage>
          </div>
        </div>
        <div
          className="profile__edit-textfield-zone"
        >
          <EditProfileForm
            activateSaveButton={[Function]}
            confirmDelete={[Function]}
            enableButton={true}
          >
            <form
              onSubmit={[Function]}
            >
              <div
                className="input-group mb2   has-feedback"
              >
                <div
                  className="profile__edit-username-zone"
                >
                  <div
                    className="profile__edit-inputNameTitle"
                  >
                    <T
                      component="profile"
                      name="usernameTitle"
                    >
                      Brugernavn
                    </T>
                  </div>
                  <div
                    className="profile__edit-textfield"
                  >
                    <input
                      className="profile__mobileinputfield   has-feedback"
                      data-cy="user-form-name"
                      name="name"
                      onChange={[Function]}
                      placeholder="Skriv brugernavn"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                className="profile__edit-libraryinfo"
              >
                <p
                  className="mb6"
                >
                  <T
                    component="login"
                    name="signedInby"
                  >
                    Du er logget på via
                  </T>
                  <input
                    className="profile__edit-libraryname"
                    disabled={true}
                    name="name"
                    type="text"
                    value=""
                  />
                </p>
              </div>
              <div
                className="profile__edit-link"
              >
                <a
                  href="/om"
                >
                  <T
                    component="profile"
                    name="termsAndConditions"
                  >
                    Se regler og vilkår for Læsekompasset
                  </T>
                </a>
              </div>
              <div
                className="profile__edit-link"
              >
                <a
                  href="#!"
                  onClick={[Function]}
                >
                  <T
                    component="profile"
                    name="deleteProfile"
                  >
                    Slet profil
                  </T>
                </a>
              </div>
              <div
                className="profile__edit-bottom-position"
              >
                <Toolbar>
                  <div
                    className="Toolbar "
                  >
                    <div
                      className="Toolbar__left"
                    />
                    <div
                      className="Toolbar__center"
                    />
                    <div
                      className="Toolbar__right"
                    >
                      <Button
                        data-cy="user-form-cancel"
                        key="0"
                        onClick={[Function]}
                        size="medium"
                        style={
                          Object {
                            "backgroundColor": "var(--porcelain)",
                          }
                        }
                        type="quaternary"
                      >
                        <button
                          className="
                              btn Button Button__medium Button__quaternary "
                          data-cy="user-form-cancel"
                          disabled={false}
                          onClick={[Function]}
                          style={
                            Object {
                              "backgroundColor": "var(--porcelain)",
                            }
                          }
                        >
                          <span>
                            <T
                              component="general"
                              name="cancel"
                            >
                              Fortryd
                            </T>
                          </span>
                        </button>
                      </Button>
                      <Button
                        data-cy="user-form-submit"
                        disabled={false}
                        key="1"
                        size="medium"
                        type="quaternary"
                      >
                        <button
                          className="
                              btn Button Button__medium Button__quaternary "
                          data-cy="user-form-submit"
                          disabled={false}
                        >
                          <span>
                            <T
                              component="profile"
                              name="saveChanges"
                            >
                              Gem ændringer
                            </T>
                          </span>
                        </button>
                      </Button>
                    </div>
                  </div>
                </Toolbar>
              </div>
            </form>
          </EditProfileForm>
        </div>
      </div>
    </div>
  </div>
</CreateProfilePage>
`;

exports[`Image Upload render function renders an image upload form 1`] = `
<div
  className="profile__edit-content"
>
  <div
    className="profile__edit-titlezone"
  >
    <h1
      className="profile__edit-title"
    >
      Rediger profil
    </h1>
  </div>
  <div
    className="profile__edit-page-position"
  >
    <div
      className="profile__edit-top-position"
    >
      <div
        className="profile__edit-image-zone"
      >
        <div
          className="profile__edit-image-upload"
        >
          <div
            className="profile-picture"
          >
            <div
              className="image-upload"
            >
              <div
                className="image-upload-loader"
              >
                <label>
                  <img
                    alt=""
                    className="image-upload-image"
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    src="/img/general/user-placeholder-thumbnail.svg"
                  />
                  <input
                    accept="image/png, image/jpeg"
                    className="droppable-image-field--file-input"
                    name={undefined}
                    onChange={[Function]}
                    type="file"
                  />
                  <div
                    className="profile-image-text"
                  >
                    Vælg billede
                  </div>
                </label>
              </div>
              <div
                className="profile__image-errors"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="profile__edit-textfield-zone"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="input-group mb2   has-feedback"
          >
            <div
              className="profile__edit-username-zone"
            >
              <div
                className="profile__edit-inputNameTitle"
              >
                Brugernavn
              </div>
              <div
                className="profile__edit-textfield"
              >
                <input
                  className="profile__mobileinputfield   has-feedback"
                  data-cy="user-form-name"
                  name="name"
                  onChange={[Function]}
                  placeholder="Skriv brugernavn"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="profile__edit-libraryinfo"
          >
            <p
              className="mb6"
            >
              Du er logget på via
              <input
                className="profile__edit-libraryname"
                disabled={true}
                name="name"
                type="text"
                value=""
              />
            </p>
          </div>
          <div
            className="profile__edit-link"
          >
            <a
              href="/om"
            >
              Se regler og vilkår for Læsekompasset
            </a>
          </div>
          <div
            className="profile__edit-link"
          >
            <a
              href="#!"
              onClick={[Function]}
            >
              Slet profil
            </a>
          </div>
          <div
            className="profile__edit-bottom-position"
          >
            <div
              className="Toolbar "
            >
              <div
                className="Toolbar__left"
              />
              <div
                className="Toolbar__center"
              />
              <div
                className="Toolbar__right"
              >
                <button
                  className="
                      btn Button Button__medium Button__quaternary "
                  data-cy="user-form-cancel"
                  disabled={false}
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "var(--porcelain)",
                    }
                  }
                >
                  
                  <span>
                    Fortryd
                  </span>
                  
                </button>
                <button
                  className="
                      btn Button Button__medium Button__quaternary "
                  data-cy="user-form-submit"
                  disabled={true}
                >
                  
                  <span>
                    Gem ændringer
                  </span>
                  
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
